--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Kudos!!!</h1>
+    <h1>Dreams don't work unless you do. !! </h1>
     <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
 	to an Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
